main.tf
provider "aws" {
    region = "${var.region}"
}

resource "aws_vpc" "default" {
    cidr_block = "${var.vpc_cidr}"
    enable_dns_hostnames = true
    tags {
        Name = "magento2"
        group = "mage-vpc"
    }
}
